# AE-latent-study

./: .gitignore  LATTICE_autoencoder.md  PLAN_torus_autoencoder.md  TORUS_autoencoder.md  ae-latent-study-discuss1.md  ae-latent-study-discuss2.md  ae-latent-study-discuss3.md  ae-latent-study-roadmap-step4.md  ae-latent-study-roadmap-step8.md  ae-latent-study-roadmap-step9.md  ae-latent-study-roadmap.md  main.py  profile_step10.py  pyproject.toml  requirements.txt  run_experiments.py  run_latent_topology_diagnostics.py  run_lattice_experiments.py  run_lattice_step10_experiments.py  run_lattice_step2_experiments.py  run_lattice_step3_experiments.py  run_lattice_step4_experiments.py  run_lattice_step5_experiments.py  run_lattice_step6_experiments.py  run_lattice_step7_experiments.py  run_lattice_step8_experiments.py  run_lattice_step9_experiments.py  run_topology_phaseB_comparison.py  run_topology_step10_followup.py  run_topology_step7_followup.py  run_topology_step8_followup.py  run_topology_step9_followup.py  test_lattice_smoke.py  toy-latent-study-torus-requirements.md  walkthrough-lattice-step1.md  walkthrough-lattice-step10.md  walkthrough-lattice-step2.md  walkthrough-lattice-step3.md  walkthrough-lattice-step4.md  walkthrough-lattice-step5.md  (+16 more)
configs/: default.py  lattice_default.py  lattice_halfplane.py  lattice_halfplane_norm.py  lattice_standard.py  lattice_standard_norm.py  lattice_standard_norm_inv.py  lattice_standard_norm_latent4.py  lattice_standard_norm_latent8.py  lattice_standard_wide.py  lattice_standard_wide_norm.py  lattice_standard_wide_norm_inv.py  (+6 more)
(+98 files in other folders)
