[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ae-latent-study"
version = "0.1.0"
description = "Torus-structured latent space study with JAX/Flax autoencoders"
requires-python = ">=3.10"
dependencies = [
    "jax>=0.4.20",
    "flax>=0.8.0",
    "optax>=0.1.7",
    "orbax-checkpoint>=0.5.0",
    "ml-collections",
    "numpy",
    "matplotlib",
    "scikit-learn",
    "absl-py",
]

[project.optional-dependencies]
umap = ["umap-learn"]
tda = [
    "ripser",
    "persim",
]
cuda = [
    "jax[cuda12]",
]

[tool.setuptools.packages.find]
include = ["configs*", "data*", "models*", "train*", "eval*"]
